v0.0.9/_sources/plugins/network_access_conditions_module.rst.txt
.. Document meta

:orphan:

.. Anchors

.. _ansible_collections.cisco.ise.network_access_conditions_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.ise.network_access_conditions -- Resource module for Network Access Conditions
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.ise collection <https://galaxy.ansible.com/cisco/ise>`_ (version 0.0.9).

    To install it use: :code:`ansible-galaxy collection install cisco.ise`.

    To use it in a playbook, specify: :code:`cisco.ise.network_access_conditions`.

.. version_added

.. versionadded:: 1.0.0 of cisco.ise

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage operations create, update and delete of the resource Network Access Conditions.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- ciscoisesdk


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="2">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-attributeId"></div>
                    <b>attributeId</b>
                    <a class="ansibleOptionLink" href="#parameter-attributeId" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Dictionary attribute id (Optional), used for additional verification.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-attributeName"></div>
                    <b>attributeName</b>
                    <a class="ansibleOptionLink" href="#parameter-attributeName" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Dictionary attribute name.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-attributeValue"></div>
                    <b>attributeValue</b>
                    <a class="ansibleOptionLink" href="#parameter-attributeValue" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>&lt;ul&gt;&lt;li&gt;Attribute value for condition&lt;/li&gt; &lt;li&gt;Value type is specified in dictionary object&lt;/li&gt; &lt;li&gt;if multiple values allowed is specified in dictionary object&lt;/li&gt;&lt;/ul&gt;.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-children"></div>
                    <b>children</b>
                    <a class="ansibleOptionLink" href="#parameter-children" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">list</span>
                         / <span style="color: purple">elements=string</span>                                            </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>In case type is andBlock or orBlock addtional conditions will be aggregated under this logical (OR/AND) condition.</div>
                                                        </td>
            </tr>
                                        <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-children/conditionType"></div>
                    <b>conditionType</b>
                    <a class="ansibleOptionLink" href="#parameter-children/conditionType" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>&lt;ul&gt;&lt;li&gt;Inidicates whether the record is the condition itself(data) or a logical(or,and) aggregation&lt;/li&gt; &lt;li&gt;Data type enum(reference,single) indicates than &quot;conditonId&quot; OR &quot;ConditionAttrs&quot; fields should contain condition data but not both&lt;/li&gt; &lt;li&gt;Logical aggreation(and,or) enum indicates that additional conditions are present under the children field&lt;/li&gt;&lt;/ul&gt;.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-children/isNegate"></div>
                    <b>isNegate</b>
                    <a class="ansibleOptionLink" href="#parameter-children/isNegate" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                        <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>no</li>
                                                                                                                                                                                                <li>yes</li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>Indicates whereas this condition is in negate mode.</div>
                                                        </td>
            </tr>
                    
                                <tr>
                                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-conditionType"></div>
                    <b>conditionType</b>
                    <a class="ansibleOptionLink" href="#parameter-conditionType" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>&lt;ul&gt;&lt;li&gt;Inidicates whether the record is the condition itself(data) or a logical(or,and) aggregation&lt;/li&gt; &lt;li&gt;Data type enum(reference,single) indicates than &quot;conditonId&quot; OR &quot;ConditionAttrs&quot; fields should contain condition data but not both&lt;/li&gt; &lt;li&gt;Logical aggreation(and,or) enum indicates that additional conditions are present under the children field&lt;/li&gt;&lt;/ul&gt;.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-datesRange"></div>
                    <b>datesRange</b>
                    <a class="ansibleOptionLink" href="#parameter-datesRange" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">dictionary</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>&lt;p&gt;Defines for which date/s TimeAndDate condition will be matched or NOT matched if used in exceptionDates prooperty&lt;br&gt; Options are - Date range, for specific date, the same date should be used for start/end date &lt;br&gt; Default - no specific dates&lt;br&gt; In order to reset the dates to have no specific dates Date format - yyyy-mm-dd (MM = month, dd = day, yyyy = year)&lt;/p&gt;.</div>
                                                        </td>
            </tr>
                                        <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-datesRange/endDate"></div>
                    <b>endDate</b>
                    <a class="ansibleOptionLink" href="#parameter-datesRange/endDate" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Network Access Conditions&#x27;s endDate.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-datesRange/startDate"></div>
                    <b>startDate</b>
                    <a class="ansibleOptionLink" href="#parameter-datesRange/startDate" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Network Access Conditions&#x27;s startDate.</div>
                                                        </td>
            </tr>
                    
                                <tr>
                                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-datesRangeException"></div>
                    <b>datesRangeException</b>
                    <a class="ansibleOptionLink" href="#parameter-datesRangeException" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">dictionary</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>&lt;p&gt;Defines for which date/s TimeAndDate condition will be matched or NOT matched if used in exceptionDates prooperty&lt;br&gt; Options are - Date range, for specific date, the same date should be used for start/end date &lt;br&gt; Default - no specific dates&lt;br&gt; In order to reset the dates to have no specific dates Date format - yyyy-mm-dd (MM = month, dd = day, yyyy = year)&lt;/p&gt;.</div>
                                                        </td>
            </tr>
                                        <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-datesRangeException/endDate"></div>
                    <b>endDate</b>
                    <a class="ansibleOptionLink" href="#parameter-datesRangeException/endDate" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Network Access Conditions&#x27;s endDate.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-datesRangeException/startDate"></div>
                    <b>startDate</b>
                    <a class="ansibleOptionLink" href="#parameter-datesRangeException/startDate" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Network Access Conditions&#x27;s startDate.</div>
                                                        </td>
            </tr>
                    
                                <tr>
                                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-description"></div>
                    <b>description</b>
                    <a class="ansibleOptionLink" href="#parameter-description" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Condition description.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-dictionaryName"></div>
                    <b>dictionaryName</b>
                    <a class="ansibleOptionLink" href="#parameter-dictionaryName" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Dictionary name.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-dictionaryValue"></div>
                    <b>dictionaryValue</b>
                    <a class="ansibleOptionLink" href="#parameter-dictionaryValue" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Dictionary value.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-hoursRange"></div>
                    <b>hoursRange</b>
                    <a class="ansibleOptionLink" href="#parameter-hoursRange" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">dictionary</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>&lt;p&gt;Defines for which hours a TimeAndDate condition will be matched or not matched if used in exceptionHours property&lt;br&gt; Time foramt - hh mm ( h = hour , mm = minutes ) &lt;br&gt; Default - All Day &lt;/p&gt;.</div>
                                                        </td>
            </tr>
                                        <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-hoursRange/endTime"></div>
                    <b>endTime</b>
                    <a class="ansibleOptionLink" href="#parameter-hoursRange/endTime" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Network Access Conditions&#x27;s endTime.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-hoursRange/startTime"></div>
                    <b>startTime</b>
                    <a class="ansibleOptionLink" href="#parameter-hoursRange/startTime" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Network Access Conditions&#x27;s startTime.</div>
                                                        </td>
            </tr>
                    
                                <tr>
                                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-hoursRangeException"></div>
                    <b>hoursRangeException</b>
                    <a class="ansibleOptionLink" href="#parameter-hoursRangeException" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">dictionary</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>&lt;p&gt;Defines for which hours a TimeAndDate condition will be matched or not matched if used in exceptionHours property&lt;br&gt; Time foramt - hh mm ( h = hour , mm = minutes ) &lt;br&gt; Default - All Day &lt;/p&gt;.</div>
                                                        </td>
            </tr>
                                        <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-hoursRangeException/endTime"></div>
                    <b>endTime</b>
                    <a class="ansibleOptionLink" href="#parameter-hoursRangeException/endTime" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Network Access Conditions&#x27;s endTime.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-hoursRangeException/startTime"></div>
                    <b>startTime</b>
                    <a class="ansibleOptionLink" href="#parameter-hoursRangeException/startTime" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Network Access Conditions&#x27;s startTime.</div>
                                                        </td>
            </tr>
                    
                                <tr>
                                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-id"></div>
                    <b>id</b>
                    <a class="ansibleOptionLink" href="#parameter-id" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Network Access Conditions&#x27;s id.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-isNegate"></div>
                    <b>isNegate</b>
                    <a class="ansibleOptionLink" href="#parameter-isNegate" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                        <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>no</li>
                                                                                                                                                                                                <li>yes</li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>Indicates whereas this condition is in negate mode.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-name"></div>
                    <b>name</b>
                    <a class="ansibleOptionLink" href="#parameter-name" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Condition name.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-operator"></div>
                    <b>operator</b>
                    <a class="ansibleOptionLink" href="#parameter-operator" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Equality operator.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-weekDays"></div>
                    <b>weekDays</b>
                    <a class="ansibleOptionLink" href="#parameter-weekDays" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">list</span>
                         / <span style="color: purple">elements=string</span>                                            </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>&lt;p&gt;Defines for which days this condition will be matched&lt;br&gt; Days format - Arrays of WeekDay enums &lt;br&gt; Default - List of All week days&lt;/p&gt;.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-weekDaysException"></div>
                    <b>weekDaysException</b>
                    <a class="ansibleOptionLink" href="#parameter-weekDaysException" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">list</span>
                         / <span style="color: purple">elements=string</span>                                            </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>&lt;p&gt;Defines for which days this condition will NOT be matched&lt;br&gt; Days format - Arrays of WeekDay enums &lt;br&gt; Default - Not enabled&lt;/p&gt;.</div>
                                                        </td>
            </tr>
                        </table>
    <br/>

.. Notes


.. Seealso

See Also
--------

.. seealso::

   :ref:`cisco.ise.plugins.module_utils.definitions.network_access_conditions <ansible_collections.cisco.ise.plugins.module_utils.definitions.network_access_conditions_module>`
      The official documentation on the **cisco.ise.plugins.module_utils.definitions.network_access_conditions** module.
   `Network Access Conditions reference <https://ciscoisesdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Network Access Conditions object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Create
      cisco.ise.network_access_conditions:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        state: present

    - name: Update by id
      cisco.ise.network_access_conditions:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        state: present
        attributeId: string
        attributeName: string
        attributeValue: string
        children:
        - conditionType: string
          isNegate: true
        conditionType: string
        datesRange:
          endDate: string
          startDate: string
        datesRangeException:
          endDate: string
          startDate: string
        description: string
        dictionaryName: string
        dictionaryValue: string
        hoursRange:
          endTime: string
          startTime: string
        hoursRangeException:
          endTime: string
          startTime: string
        id: string
        isNegate: true
        name: string
        operator: string
        weekDays:
        - string
        weekDaysException:
        - string

    - name: Delete by id
      cisco.ise.network_access_conditions:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        state: absent
        id: string





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-ise_response"></div>
                    <b>ise_response</b>
                    <a class="ansibleOptionLink" href="#return-ise_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">dictionary</span>
                                          </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco ISE Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">{
      &quot;conditionType&quot;: &quot;string&quot;,
      &quot;isNegate&quot;: true,
      &quot;name&quot;: &quot;string&quot;,
      &quot;id&quot;: &quot;string&quot;,
      &quot;description&quot;: &quot;string&quot;,
      &quot;dictionaryName&quot;: &quot;string&quot;,
      &quot;attributeName&quot;: &quot;string&quot;,
      &quot;attributeId&quot;: &quot;string&quot;,
      &quot;operator&quot;: &quot;string&quot;,
      &quot;dictionaryValue&quot;: &quot;string&quot;,
      &quot;attributeValue&quot;: &quot;string&quot;,
      &quot;children&quot;: [
        {
          &quot;conditionType&quot;: &quot;string&quot;,
          &quot;isNegate&quot;: true
        }
      ],
      &quot;hoursRange&quot;: {
        &quot;startTime&quot;: &quot;string&quot;,
        &quot;endTime&quot;: &quot;string&quot;
      },
      &quot;hoursRangeException&quot;: {
        &quot;startTime&quot;: &quot;string&quot;,
        &quot;endTime&quot;: &quot;string&quot;
      },
      &quot;weekDays&quot;: [
        &quot;string&quot;
      ],
      &quot;weekDaysException&quot;: [
        &quot;string&quot;
      ],
      &quot;datesRange&quot;: {
        &quot;startDate&quot;: &quot;string&quot;,
        &quot;endDate&quot;: &quot;string&quot;
      },
      &quot;datesRangeException&quot;: {
        &quot;startDate&quot;: &quot;string&quot;,
        &quot;endDate&quot;: &quot;string&quot;
      }
    }</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

